# bridge-sdk

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  fees.md  forwarding.md
examples/: .env.example  README.md  ethereum-to-hub.ts  fee-estimation.ts  hub-to-ethereum.ts  kaspa-deposit.ts  package.json  rollapp-to-ethereum.ts  solana-to-hub.ts
examples/kaspa-sender/: Cargo.toml
examples/kaspa-sender/src/: main.rs
examples/src/: env.ts
examples/src/from-evm/: to-hub.ts  to-kaspa.ts  to-solana.ts
examples/src/from-hub/: to-evm.ts  to-kaspa.ts  to-solana.ts
examples/src/from-kaspa/: to-evm.ts  to-hub.ts  to-solana.ts
examples/src/from-solana/: to-evm.ts  to-hub.ts  to-kaspa.ts
examples/src/shared/: address.ts  hub-signer.ts
sdk/: .eslintrc.cjs  CHANGELOG.md  README.md  USAGE.md  package.json  tsconfig.json  typedoc.json
sdk/src/: client.ts  index.ts
sdk/src/__tests__/: client-transfer.test.ts  setup.test.ts
sdk/src/adapters/: evm.ts  kaspa.ts
sdk/src/config/: chains.ts  constants.ts  index.ts  tokens.ts  types.ts
sdk/src/utils/: hex.ts  (+3 more)
src/: client.ts  index.ts
src/adapters/: evm.ts  hub.ts  index.ts  kaspa.ts  solana.ts
src/config/: chains.ts  constants.ts  index.ts  rpc.ts  tokens.ts  types.ts
src/fees/: bridging.ts  defaults.ts  eibc.ts  forwarding.ts  index.ts  provider.ts  types.ts
src/forward/: index.ts  memo.ts  metadata.ts  types.ts
src/proto/: hyperlane.ts
src/utils/: address.ts  ibc.ts  index.ts
(+23 files in other folders)
